Fix view toggle and FP buttons alignment to right side
Add margin-left: auto to #customtabview to push the view toggle
buttons and FP button to the right side of the toolbar, underneath
the search bar.

--- a/spiderfoot/static/css/dark.css
+++ b/spiderfoot/static/css/dark.css
@@ -1252,6 +1252,7 @@ pre.table-border-bg-inherit {
 #customtabview {
   display: inline-flex;
   align-items: center;
+  margin-left: auto;
 }
 
 /* Container for the nav tabs - toolbar-like background */
